--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@
 
 /* ==================== Global ==================== */
 
-html, body {
+html {
+    scroll-behavior: smooth;
     height: 100%;
-    margin: 0;
-    padding: 0;
 }
 
 body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     font-family: 'Orbitron', sans-serif;
     line-height: 1.6;
     display: flex;
